# ChangeLog for dev-perl/Spreadsheet-ParseExcel
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Spreadsheet-ParseExcel/ChangeLog,v 1.74 2013/04/25 21:29:54 ago Exp $

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Stable for sh, wrt bug #449298

  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Stable for s390, wrt bug #449298

  21 Apr 2013; Agostino Sarubbo <ago@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Stable for sparc, wrt bug #449298

  21 Apr 2013; Agostino Sarubbo <ago@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Stable for arm, wrt bug #449298

  20 Apr 2013; Agostino Sarubbo <ago@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Stable for alpha, wrt bug #449298

  19 Apr 2013; Agostino Sarubbo <ago@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Stable for ia64, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Stable for ppc64, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Stable for ppc, wrt bug #449298

  17 Apr 2013; Jeroen Roovers <jer@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Stable for HPPA (bug #449298).

  08 Feb 2013; Sébastien Fabbro <bicatali@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Keyword amd64-linux and x86-linux

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Add ~ppc64, wrt bug #428248

  11 Sep 2012; Raúl Porcel <armin76@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Add ~alpha/~ia64/~s390/~sh/~sparc wrt #428248

  01 Sep 2012; Fabian Groffen <grobian@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild:
  Marked ~ppc-aix, bug #432288

  29 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  Spreadsheet-ParseExcel-0.590.0.ebuild: