@@ -1,8 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Spreadsheet-ParseExcel/Spreadsheet-ParseExcel-0.590.0.ebuild,v 1.24 2013/04/25 21:29:54 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Spreadsheet-ParseExcel/Spreadsheet-ParseExcel-0.590.0-r1.ebuild,v 1.1 2014/08/22 21:11:17 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=JMCNAMARA
 MODULE_VERSION=0.59
